--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-router-dom": "^7.6.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.0.0",
